[gd_scene load_steps=10 format=2]

[ext_resource path="res://Vehicles/Truck/Truck.tscn" type="PackedScene" id=1]
[ext_resource path="res://Material/Wall.tres" type="Material" id=2]
[ext_resource path="res://Levels/RoasTileSet.tres" type="MeshLibrary" id=3]
[ext_resource path="res://Cameras/CameraAroundCar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Drivers/User.gd" type="Script" id=5]
[ext_resource path="res://Streets/Target.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/init-level.gd" type="Script" id=7]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[node name="Level" type="Spatial"]
script = ExtResource( 7 )

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 3 )
cell_size = Vector3( 8, 8, 8 )
cell_center_y = false
data = {
"cells": PoolIntArray( 0, 0, 1441795, 1, 0, 7, 2, 0, 6, 3, 0, 5, 4, 0, 4, 5, 0, -1072300032, 6, 0, 1441795, 7, 0, 1441795, 8, 0, 1441795, 9, 0, 1075183619, 10, 0, 655362, 11, 0, 1441799, 12, 0, 1441792, 13, 0, 3, 14, 0, 536870919, 65522, 0, 3, 65523, 0, 1048576, 65524, 0, 1048576, 65525, 0, 1, 65526, 0, 538312707, 65527, 0, 1441795, 65528, 0, 1441795, 65529, 0, 1441795, 65530, 0, 1441792, 65531, 0, 655364, 65532, 0, 655365, 65533, 0, 655366, 65534, 0, -1073086457, 65535, 0, 1441795, 65536, 0, 538312712, 65543, 0, 1048584, 131071, 0, 1048584, 0, 1, 1441795, 1, 1, 1441795, 2, 1, 1441795, 3, 1, 1441795, 4, 1, 1441795, 5, 1, 538312704, 6, 1, 1048584, 7, 1, 1048584, 8, 1, 1048584, 9, 1, 1048584, 10, 1, 655362, 11, 1, 1048583, 12, 1, 1441803, 13, 1, 3, 14, 1, 536870919, 65522, 1, 3, 65523, 1, -1609564160, 65524, 1, 1048576, 65525, 1, 538312705, 65526, 1, 1441795, 65527, 1, 1441795, 65528, 1, 1441795, 65529, 1, 1441795, 65530, 1, 1441792, 65531, 1, 1441795, 65532, 1, 1441795, 65533, 1, 1441795, 65534, 1, 1441795, 65535, 1, 1441795, 0, 2, 1048584, 1, 2, 1048584, 2, 2, 1048584, 3, 2, 1048584, 4, 2, 1048584, 5, 2, 10, 6, 2, -1609564154, 9, 2, 538312712, 10, 2, 1, 11, 2, 1441795, 12, 2, 1441795, 13, 2, 1048577, 14, 2, 536870919, 65521, 2, 655367, 65522, 2, 1, 65523, 2, 1048579, 65524, 2, 1048579, 65525, 2, 1048577, 65526, 2, -1610612728, 65527, 2, -1609170936, 65528, 2, -1609170936, 65529, 2, 538312711, 65530, 2, 2, 65531, 2, 1048584, 65532, 2, 1048584, 65533, 2, 1048584, 65534, 2, 537919496, 65535, 2, 1048584, 5, 3, 10, 6, 3, -1609564154, 10, 3, 655366, 11, 3, 537526278, 12, 3, 655366, 13, 3, 538312711, 14, 3, 536870919, 65522, 3, -1609564152, 65523, 3, -1609564152, 65524, 3, -1609564152, 65525, 3, 1048584, 65529, 3, 538312711, 65530, 3, 3, 65531, 3, 1048582, 5, 4, 10, 6, 4, -1609564154, 65529, 4, 1441798, 65530, 4, 3, 65531, 4, 537919495, 0, 5, 1048586, 1, 5, 1048586, 2, 5, 1048586, 3, 5, 1048586, 4, 5, 1048586, 5, 5, 1048577, 6, 5, -1609564154, 65529, 5, 1441798, 65530, 5, 1, 65531, 5, 1048579, 65532, 5, 1048579, 65533, 5, 1048586, 65534, 5, 1048586, 65535, 5, 1048586, 0, 6, 655366, 1, 6, 655366, 2, 6, 655366, 3, 6, -1610612729, 4, 6, -1610612730, 5, 6, 6, 6, 6, 537919495, 65530, 6, 537526278, 65531, 6, 655366, 65532, 6, 655366, 65533, 6, 655366, 65534, 6, 655366, 65535, 6, 655366, 65533, 65528, 536870918, 65534, 65528, 536870918, 65535, 65528, 6, 0, 65529, 6, 1, 65529, 6, 2, 65529, 6, 3, 65529, -1610612730, 4, 65529, -1610612730, 5, 65529, -1610612730, 6, 65529, -1610612730, 7, 65529, -1610612730, 65530, 65529, -1610612730, 65531, 65529, -1610612730, 65532, 65529, -1609957369, 65533, 65529, -1609564150, 65534, 65529, -1609564150, 65535, 65529, -1610612729, 0, 65530, 1441795, 1, 65530, 1441795, 2, 65530, 1441794, 3, 65530, 1441794, 4, 65530, 1441794, 5, 65530, 1441794, 6, 65530, 1048579, 7, 65530, 655361, 8, 65530, 1441798, 65529, 65530, 1441798, 65530, 65530, 1441793, 65531, 65530, 1441795, 65532, 65530, 1441795, 65533, 65530, 1048586, 65534, 65530, 1048586, 65535, 65530, 1441795, 1, 65531, -1609170944, 2, 65531, -1610612736, 3, 65531, -1610612736, 4, 65531, 0, 5, 65531, 655363, 6, 65531, 538312711, 7, 65531, 1048580, 8, 65531, 1048582, 65529, 65531, 538312710, 65530, 65531, 3, 65533, 65531, 1441798, 65534, 65531, 1048580, 65535, 65531, -1609170937, 65544, 65531, -1609957368, 131069, 65531, -1609170937, 1, 65532, -1609170944, 2, 65532, -1610612736, 3, 65532, -1610612736, 4, 65532, -1610612736, 5, 65532, 655363, 6, 65532, 538312711, 7, 65532, 1048581, 8, 65532, 1048582, 65529, 65532, 538312710, 65530, 65532, 3, 65533, 65532, 655367, 65534, 65532, 1048581, 65535, 65532, 537919495, 65544, 65532, 1048582, 131069, 65532, -1609170937, 5, 65533, 655363, 6, 65533, 538312711, 7, 65533, 1048582, 8, 65533, -1609564153, 65529, 65533, 1441798, 65530, 65533, 3, 65533, 65533, 1075183623, 65534, 65533, 1048582, 65544, 65533, -1609564154, 131069, 65533, -1609170937, 5, 65534, 655363, 6, 65534, 538312711, 7, 65534, 1048583, 8, 65534, 1048582, 9, 65534, -1609564154, 10, 65534, -1609564154, 11, 65534, 1048583, 12, 65534, 1048583, 13, 65534, -1609564153, 65529, 65534, 538312710, 65530, 65534, 3, 65533, 65534, -1609170937, 65534, 65534, 1048583, 131069, 65534, 1441799, 0, 65535, 1048584, 1, 65535, 1048584, 2, 65535, 1048584, 3, 65535, 1048584, 4, 65535, 1441800, 5, 65535, -1073086462, 6, 65535, -1609564153, 7, 65535, -1609564153, 8, 65535, -1609564153, 10, 65535, 1441793, 11, 65535, 1441795, 12, 65535, 1441795, 13, 65535, 655361, 14, 65535, 7, 65521, 65535, 655367, 65522, 65535, 1441793, 65523, 65535, 1048579, 65524, 65535, 1611661315, 65525, 65535, 655361, 65529, 65535, 537919495, 65530, 65535, -536870910, 65531, 65535, 537919496, 65532, 65535, 1048584, 65533, 65535, 1048584, 65534, 65535, 1048584, 65535, 65535, 1048584, 65536, 65535, 1048584, 65537, 65535, 1048584, 65538, 65535, 1048584, 65539, 65535, 1048584, 65540, 65535, 1048584, 65541, 65535, 1048584, 65542, 65535, 1441800, 65543, 65535, 1048577, 65544, 65535, -1073741816, 131069, 65535, 655368, 131070, 65535, 1, 131071, 65535, 1048584 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 1, 0 )
}

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 140, 0, 0, 0, 1, 0, 0, 0, 70, 4.69156, -1.07999, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="StaticBody" type="StaticBody" parent="MeshInstance"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance/StaticBody"]
shape = SubResource( 2 )

[node name="Me" type="Spatial" parent="."]
script = ExtResource( 5 )

[node name="vehicle" parent="Me" instance=ExtResource( 1 )]
transform = Transform( -0.996851, 0, 0.0792942, 0, 1, 0, -0.0792942, 0, -0.996851, 6.55466, 0, -16.7865 )

[node name="Offset" parent="Me/vehicle" instance=ExtResource( 4 )]
transform = Transform( -1, 0, -7.54979e-08, 0, 1, 0, 7.54979e-08, 0, -1, -1.90735e-06, 0, 0 )

[node name="SpawnPath1" type="Spatial" parent="."]

[node name="Car1" type="Position3D" parent="SpawnPath1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -102.512, 0.225428, 2.32037 )

[node name="Car2" type="Position3D" parent="SpawnPath1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -90.2977, 0.225428, 9.82107 )

[node name="Car3" type="Position3D" parent="SpawnPath1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -96.1703, 0.225428, 6.29518 )

[node name="Car4" type="Position3D" parent="SpawnPath1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -96.1703, 0.225428, 14.3829 )

[node name="Car5" type="Position3D" parent="SpawnPath1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -99.2527, 0.225428, 14.3829 )

[node name="Car6" type="Position3D" parent="SpawnPath1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -103.535, 0.225428, 14.3829 )

[node name="Car7" type="Position3D" parent="SpawnPath1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -108.629, 0.225428, 14.3829 )

[node name="Car23" type="Position3D" parent="SpawnPath1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -108.629, 0.225428, 20.5495 )

[node name="Car24" type="Position3D" parent="SpawnPath1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -102.014, 0.225428, 20.5495 )

[node name="Car25" type="Position3D" parent="SpawnPath1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -102.014, 0.225428, 20.5495 )

[node name="Car8" type="Position3D" parent="SpawnPath1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -89.5296, 0.225428, 14.3829 )

[node name="Car9" type="Position3D" parent="SpawnPath1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -89.5296, 0.225428, 2.07682 )

[node name="Car10" type="Position3D" parent="SpawnPath1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -92.3616, 0.225428, 2.07682 )

[node name="Car11" type="Position3D" parent="SpawnPath1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -96.9038, 0.225428, 2.07682 )

[node name="Car12" type="Position3D" parent="SpawnPath1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -107.153, 0.225428, 2.07682 )

[node name="Car15" type="Position3D" parent="SpawnPath1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -107.153, 0.225428, -4.05903 )

[node name="Car16" type="Position3D" parent="SpawnPath1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -101.655, 0.225428, -4.05903 )

[node name="Car17" type="Position3D" parent="SpawnPath1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -96.0788, 0.225428, -4.05903 )

[node name="Car18" type="Position3D" parent="SpawnPath1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -89.436, 0.225428, -4.05903 )

[node name="Car19" type="Position3D" parent="SpawnPath1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -84.1655, 0.225428, -4.05903 )

[node name="Car20" type="Position3D" parent="SpawnPath1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -84.1655, 0.225428, 3.06497 )

[node name="Car21" type="Position3D" parent="SpawnPath1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -74.6318, 0.225428, 3.06497 )

[node name="Car22" type="Position3D" parent="SpawnPath1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -74.6318, 0.225428, 3.06497 )

[node name="Car13" type="Position3D" parent="SpawnPath1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -107.153, 0.225428, 7.30614 )

[node name="Car14" type="Position3D" parent="SpawnPath1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -101.146, 0.225428, 7.30614 )

[node name="Path1" type="Spatial" parent="."]
visible = false

[node name="Target" parent="Path1" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -83.7592, 0.662206, 12.4794 )

[node name="Target2" parent="Path1" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 80.2321, 0.662206, 12.4794 )

[node name="Target3" parent="Path1" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 88.3323, 0.662206, 20.1155 )

[node name="Target4" parent="Path1" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 107.465, 0.662206, 18.3137 )

[node name="Target5" parent="Path1" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 107.465, 0.662206, -4.33725 )

[node name="Target6" parent="Path1" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 84.7287, 0.662206, -4.33725 )

[node name="Target7" parent="Path1" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 78.0236, 0.662206, 3.56877 )

[node name="Target8" parent="Path1" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -81.3325, 0.662206, 3.56877 )

[node name="Target9" parent="Path1" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -87.5506, 0.662206, -3.8729 )

[node name="Target10" parent="Path1" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -108.002, 0.662206, -0.78272 )

[node name="Target11" parent="Path1" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -104.398, 0.662206, 20.1578 )

[node name="Target12" parent="Path1" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -90.2413, 0.662206, 20.1578 )

[node name="Path2" type="Spatial" parent="."]
visible = false

[node name="Target" parent="Path2" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 43.8125, 1.08037, -44.0999 )

[node name="Target2" parent="Path2" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 59.6279, 1.08037, -44.0999 )

[node name="Target3" parent="Path2" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 59.6279, 8.52448, -3.58363 )

[node name="Target4" parent="Path2" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.0164, 8.52448, -3.58363 )

[node name="Target5" parent="Path2" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.0164, 0.536622, -43.9903 )

[node name="Target6" parent="Path2" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -40.9982, 0.536622, -43.9903 )

[node name="Target7" parent="Path2" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -44.6938, 0.536622, 38.7681 )

[node name="Target8" parent="Path2" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 39.4385, 0.536622, 44.6219 )

[node name="SpawnPath2" type="Spatial" parent="."]

[node name="Position3D" type="Position3D" parent="SpawnPath2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.122, 0, -38.8649 )

[node name="Position3D2" type="Position3D" parent="SpawnPath2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20.4686, 0, -38.8649 )

[node name="Position3D3" type="Position3D" parent="SpawnPath2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 28.7627, 0, -38.8649 )

[node name="Position3D4" type="Position3D" parent="SpawnPath2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24.7716, 0, -38.8649 )

[node name="Position3D5" type="Position3D" parent="SpawnPath2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16.1034, 0, -38.8649 )

[node name="Position3D6" type="Position3D" parent="SpawnPath2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.30727, 0, -38.8649 )

[node name="Position3D7" type="Position3D" parent="SpawnPath2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.30727, 0, -28.3074 )

[node name="Position3D8" type="Position3D" parent="SpawnPath2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.8257, 0, -28.3074 )

[node name="Position3D9" type="Position3D" parent="SpawnPath2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24.4689, 0, -28.3074 )

[node name="Position3D10" type="Position3D" parent="SpawnPath2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32.0495, 0, -28.3074 )

[node name="Position3D11" type="Position3D" parent="SpawnPath2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32.0495, 0, -17.5505 )

[node name="Position3D12" type="Position3D" parent="SpawnPath2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20.2436, 0, -17.5505 )
